adding endpoints flow, add users script ans users csv
